# sjo-scraper

./: README.md  courses.csv  courses.json  main.py  pyproject.toml
